VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc2Up.err
[8MB/2.259GB][  0%][>                                                 ][4MB/s]  [40MB/2.259GB][  1%][>                                                 ][13.33MB/s]  [88MB/2.259GB][  3%][=>                                                ][22MB/s]  [144MB/2.259GB][  6%][===>                                              ][28.8MB/s]  [184MB/2.259GB][  7%][===>                                              ][30.67MB/s]  [216MB/2.259GB][  9%][====>                                             ][30.86MB/s]  [248MB/2.259GB][ 10%][=====>                                            ][31MB/s]  [288MB/2.259GB][ 12%][======>                                           ][32MB/s]  [328MB/2.259GB][ 14%][=======>                                          ][32.8MB/s]  [360MB/2.259GB][ 15%][=======>                                          ][32.73MB/s]  [400MB/2.259GB][ 17%][========>                                         ][33.33MB/s]  [440MB/2.259GB][ 19%][=========>                                        ][33.85MB/s]  [480MB/2.259GB][ 20%][==========>                                       ][34.29MB/s]  [528MB/2.259GB][ 22%][===========>                                      ][35.2MB/s]  [568MB/2.259GB][ 24%][============>                                     ][35.5MB/s]  [608MB/2.259GB][ 26%][=============>                                    ][35.76MB/s]  [648MB/2.259GB][ 28%][==============>                                   ][36MB/s]  [696MB/2.259GB][ 30%][===============>                                  ][36.63MB/s]  [744MB/2.259GB][ 32%][================>                                 ][37.2MB/s]  [776MB/2.259GB][ 33%][================>                                 ][36.95MB/s]  [824MB/2.259GB][ 35%][=================>                                ][37.45MB/s]  [872MB/2.259GB][ 37%][==================>                               ][37.91MB/s]  [920MB/2.259GB][ 39%][===================>                              ][38.33MB/s]  [968MB/2.259GB][ 41%][====================>                             ][38.72MB/s]  [1024MB/2.259GB][ 44%][======================>                           ][39.38MB/s]  [1.055GB/2.259GB][ 46%][=======================>                          ][40MB/s]  [1.109GB/2.259GB][ 49%][========================>                         ][40.57MB/s]  [1.164GB/2.259GB][ 51%][=========================>                        ][41.1MB/s]  [1.219GB/2.259GB][ 53%][==========================>                       ][41.6MB/s]  [1.273GB/2.259GB][ 56%][============================>                     ][42.06MB/s]  [1.328GB/2.259GB][ 58%][=============================>                    ][42.5MB/s]  [1.383GB/2.259GB][ 61%][==============================>                   ][42.91MB/s]  [1.438GB/2.259GB][ 63%][===============================>                  ][43.29MB/s]  [1.484GB/2.259GB][ 65%][================================>                 ][43.43MB/s]  [1.531GB/2.259GB][ 67%][=================================>                ][43.56MB/s]  [1.578GB/2.259GB][ 69%][==================================>               ][43.68MB/s]  [1.633GB/2.259GB][ 72%][====================================>             ][44MB/s]  [1.688GB/2.259GB][ 74%][=====================================>            ][44.31MB/s]  [1.742GB/2.259GB][ 77%][======================================>           ][44.6MB/s]  [1.805GB/2.259GB][ 79%][=======================================>          ][45.07MB/s]  [1.859GB/2.259GB][ 82%][=========================================>        ][45.33MB/s]  [1.922GB/2.259GB][ 85%][==========================================>       ][45.77MB/s]  [1.977GB/2.259GB][ 87%][===========================================>      ][46MB/s]  [2.016GB/2.259GB][ 89%][============================================>     ][45.87MB/s]  [2.078GB/2.259GB][ 91%][=============================================>    ][46.26MB/s]  [2.133GB/2.259GB][ 94%][===============================================>  ][46.47MB/s]  [2.188GB/2.259GB][ 96%][================================================> ][46.67MB/s]  [2.25GB/2.259GB][ 99%][=================================================>][47.02MB/s]  [2.259GB/2.259GB][100%][==================================================][47.22MB/s]  [2.259GB/2.259GB][100%][==================================================][47.22MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_37587/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_37587/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
